# origin

./: .gitignore
FinalDiplom/SearchEngine/: CMakeLists.txt  config.ini  database.cpp  database.h  dirReader.cpp  dirReader.h  indexer.cpp  indexer.h  ini.cpp  ini.h  ini.txt  main.cpp  safe_queue.cpp  thread_pool.cpp  thread_pool.h
FinalDiplom/SearchEngine/Indexer/: indexer.cpp  indexer.h  main.cpp  thread_pool.h
FinalDiplom/SearchEngine/Searcher/: main.cpp
FinalDiplom/SearchEngine/Shared/: database.cpp  database.h  ini_parser.cpp  ini_parser.h  string_modify.cpp  string_modify.h
Lesson 10/Task 3/: CMakeLists.txt  Leaver.cpp  Leaver.h  main.cpp
Lesson 10/Task 5/: CMakeLists.txt  Class_hierarchy.cpp  EquilaterallesTriangle.h  Figure.cpp  IsoscelesTriangle.cpp  Parallelogram.cpp  RightTriangle.cpp
Lesson 11/: BitaryMore.cpp  BitaryMore.sln  BitaryMore.vcxproj  BitaryMore.vcxproj.filters
Lesson 12/Fibonacci/: fibonacci.cpp  fibonacci.sln  fibonacci.vcxproj
Lesson 12/FibonacciMemory/: fibonacciMemory.cpp  fibonacciMemory.sln  fibonacciMemory.vcxproj  fibonacciMemory.vcxproj.filters
Lesson 13/countSort/: countSort.cpp  countSort.sln  countSort.vcxproj  countSort.vcxproj.filters
Lesson 13/mergeSort/: mergeSort.cpp  mergeSort.sln  mergeSort.vcxproj
Lesson 15/append_to_dinamic_array/: append_to_dinamic_array.cpp  append_to_dinamic_array.sln  append_to_dinamic_array.vcxproj  append_to_dinamic_array.vcxproj.filters
Lesson 15/print_dinamic_arr/: print_dinamic_arr.cpp  print_dinamic_arr.sln  print_dinamic_arr.vcxproj  print_dinamic_arr.vcxproj.filters
Lesson 15/remove_dinamic_array_head/: remove_dinamic_array_head.cpp  remove_dinamic_array_head.sln  remove_dinamic_array_head.vcxproj  remove_dinamic_array_head.vcxproj.filters
Lesson 16 pyramid/print_pyramid/: print_pyramid.cpp  print_pyramid.sln  print_pyramid.vcxproj
Lesson 16 pyramid/pyramid_trip/: pyramid_trip.cpp  pyramid_trip.sln  pyramid_trip.vcxproj  pyramid_trip.vcxproj.filters
Lesson 17 hash/find_substring_light_rabin_karp/: find_substring_light_rabin_karp.cpp  find_substring_light_rabin_karp.sln  find_substring_light_rabin_karp.vcxproj  find_substring_light_rabin_karp.vcxproj.filters
Lesson 17 hash/real_string_hash/: real_string_hash.cpp  real_string_hash.sln  real_string_hash.vcxproj  real_string_hash.vcxproj.filters
Lesson 17 hash/simple_string_hash/: simple_string_hash.cpp  simple_string_hash.sln  simple_string_hash.vcxproj  simple_string_hash.vcxproj.filters
Lesson 18 graph/breadth_first_search/: breadth_first_search.cpp  breadth_first_search.sln  breadth_first_search.vcxproj  breadth_first_search.vcxproj.filters
Lesson 18 graph/depth_first_search/: depth_first_search.cpp  depth_first_search.sln  depth_first_search.vcxproj  depth_first_search.vcxproj.filters
Lesson 18 graph/graph_find_connected_components/: graph_find_connected_components.cpp  graph_find_connected_components.sln  graph_find_connected_components.vcxproj  graph_find_connected_components.vcxproj.filters
Lesson 18 graph/graph_find_cycle/: graph_find_cycle.cpp  graph_find_cycle.sln  graph_find_cycle.vcxproj  graph_find_cycle.vcxproj.filters
Lesson 19 digraph/digraph_output/: digraph_output.cpp  digraph_output.sln  digraph_output.vcxproj  digraph_output.vcxproj.filters
Lesson 19 digraph/digraph_topological_sorting/: digraph_topological_sorting.cpp  digraph_topological_sorting.sln  digraph_topological_sorting.vcxproj  digraph_topological_sorting.vcxproj.filters
Lesson 2/Task 1/: Calculator.cpp
Lesson 2/Task 2/: Counter.cpp
Lesson 20/mistakes/: Source.cpp  mistakes.sln  (+1 more)
Lesson 28 ini_parser/: TextFile.ini  ini_parser.cpp  ini_parser.sln  ini_parser.vcxproj  ini_parser.vcxproj.filters
Lesson 29 SQL/: employee.sql
Lesson 30 SQL/: musicStore_insert.sql  musicStore_select.sql
Lesson 31 PostgreSQL из С++/: CMakeLists.txt  main.cpp
Lesson 9/Task 2/: CMakeLists.txt  Figure.h  Quadrangle.h  Rectangle.h  Rhomb.cpp  RightTriangle.h
diplom/Task 2/: CMakeLists.txt  Racing_simulator.cpp  broom.h  eagle.h  myException.h
diplom/Task 2/DLL/: CMakeLists.txt  air.cpp  air.h  broom.h  camel.cpp  camelfast.cpp  camelfast.h  centaur.h  eagle.cpp  eagle.h  flyingCarpet.h  ground.cpp  ground.h  myException.cpp  roverboots.h  transport.h
racing_simulator/: air.h  broom.cpp  camel.h  ground.h
(+292 files in other folders)
