cmake_minimum_required(VERSION 3.20)
project(class_hierarchy_CMake)
set(HEADER_F EquilaterallesTriangle.h Figure.h IsoscelesTriangle.h Parallelogram.h Quadrangle.h Rectangle.h Rhomb.h RightTriangle.h Square.h Triangle.h)
set(SOURCE_F Class_hierarchy.cpp EquilaterallesTriangle.cpp Figure.cpp IsoscelesTriangle.cpp Parallelogram.cpp Quadrangle.cpp Rectangle.cpp Rhomb.cpp RightTriangle.cpp Square.cpp Triangle.cpp)
add_executable(class_hierarchy_CMake ${SOURCE_F} ${HEADER_F})