cmake_minimum_required(VERSION 3.20)
project(racing_simulator)
set(SOURCE_F air.cpp broom.cpp camel.cpp camelfast.cpp centaur.cpp eagle.cpp flyingCarpet.cpp flyingCarpet.cpp myException.cpp roverboots.cpp transport.cpp ground.cpp)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
add_library(racing_simulator_dll SHARED ${SOURCE_F})
add_executable(racing_simulator Racing_simulator.cpp)
target_link_libraries(racing_simulator racing_simulator_dll)